--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/emdc.jpg"
+  avatar           : "emdc.jpg"
   name             : "Enrique M. del Castillo"
   pronouns         :  "he, him, his"  
   bio              : "PhD Candidate in Geomechanics @ Stanford CEE"
