--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /projects/  
 
   - title: "Publications"
-    url: https://scholar.google.com/citations?user=TC6VCWsAAAAJ&hl=en
+    url: /publications/ #https://scholar.google.com/citations?user=TC6VCWsAAAAJ&hl=en
 
   - title: "Teaching"
     url: /teaching/    
